Changes for Padre-Plugin-LaTeX

{{$NEXT}}
        - add Dutch translation (ddn123456 - Dirk De Nijs)
	- add autocompletion support for LaTeX: complete commands, packages,
	  environments, internal references, and citations (ZENOG)
	- add autocompletion support for BibTeX (ZENOG)
	- 'Changes' format more like in Padre's (ZENOG)
	- add link to Detexify to the menu (ZENOG)
	- define get_command method for LaTeX documents so that they can be 'run'
	  from the menu (ZENOG)

0.08   2010.12.06
	- restore missing POT/PO translation sources (Damyan Ivanov, AZAWAWI)
	- add hint about BibTeX highlighting in Kate plugin (ZENOG)
	- add BibTeX support (commenting in and out) (ZENOG)
	- update German translation (ZENOG)
	- fix problem with dist.ini: multiple values for copyright_holder (ZENOG)

0.07   2010.10.29
        - remove Test::NeedsDisplay dependency (AZAWAWI)

0.06   2010.10.27
        - t/00-load.t is magically injected by [@PadrePlugin] via [LoadTests] (AZAWAWI)

0.05   2010.10.26
        - update Arabic translation since it was not working (AZAWAWI)

0.04   2010.10.26
        Nothing... Simply a reupload of 0.03 (AZAWAWI)

0.03   2010.10.26
        - Syntax checking still crashes; will improve later (ZENOG)
        - Added Italian translation (SBLADIN)
        - Switched to Dist::Zilla (AZAWAWI)
        - Added Arabic translation (AZAWAWI)
        - Compatibility with latest Padre (AZAWAWI)

0.02    2010-07-23
        - Compatibility to newer Padre versions
        - added preliminary i18n support (does not work correctly)
        - new features: create+view PDF, run BibTeX

0.01    2010-05-11
        First version, released on an unsuspecting world.
        - Only feature: toggle comments
