@@ -7,35 +7,57 @@ use warnings;
 
 our @ISA = 'Padre::Task::Syntax';
 
-use Padre::Wx;
+sub new {
+	my $class = shift;
+
+	my %args = @_;
+
+	my $self = $class->SUPER::new(%args);
+
+	return $self;
+}
 
 
 sub syntax {
 	my $self = shift;
 	my $text = shift;
 
-	my $filename = $self->{filename};
+	my $filename    = $self->{filename};
+	my $project_dir = $self->{project};
 
-	# TODO check for pdflatex
-	my $pdflatex_command = "pdflatex -file-line-error -draftmode -interaction nonstopmode $filename";
+	my $pdflatex_command = "cd $project_dir; pdflatex -file-line-error -draftmode -interaction nonstopmode $filename";
 	my $output           = `$pdflatex_command`;
 
-	## 	./camra-uhi.tex:292: Paragraph ended before \begin was complete.
+	warn "Complete output: >>>$output<<<\n";
+
+	my @lines = split /\n/, $output;
 	my @issues = ();
 
-	# push @issues, { msg => $2, line => $1, severity => Padre::Wx::MarkError, desc => '' };
-
 	LINE:
-	foreach my $line ( split /\n/, $output ) {
+	for (my $i = 0; $i < scalar @lines; $i++) {
+		my $line = $lines[$i];
+		
 		next LINE if not $line =~ /.*:(\d+):\s*(.*)/;
+		my $line_no   = $1;
+		my $error_msg = $2;
 
-		warn "line: $line\n";
+		warn "line: '$line'\n";
+		
+		while (++$i < scalar @lines && $lines[$i] !~ /^\[\d+\]/) {
+			$lines[$i] =~ s/^l\.\d+ / /;
+			$error_msg .= $lines[$i];
+		}
+
+		$error_msg =~ s/\s+/ /g;
+
+		warn "$line_no: '$error_msg'\n";
 
 		my %issue = (
-			msg      => $2,
-			line     => $1,
-			severity => Padre::Wx::MarkError,
-			desc     => '',
+			line    => $line_no,
+			file    => $filename,
+			type    => 'F',
+			message => $error_msg,
+			# at # TODO
 		);
 
 		push @issues, \%issue;
